# rocket-api

./: .gitignore  Cargo.toml  README.md  Rocket.toml  database.sqlite  database.sqlite-shm  database.sqlite-wal  diesel.toml
migrations/2024-09-08-041818_create_rustacean/: down.sql  up.sql
src/: auth.rs  db_connection.rs  main.rs  schema.rs  user.rs
src/dto/: mod.rs  new_rustacean.rs
src/models/: rustacean.rs
src/repositories/: mod.rs  repository.rs  rustacean_repository.rs
