[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
rocket = {version = "0.5.1", features = ["json"]}
serde_json = "1.0.128"
diesel = { version = "2.2.0", features = ["sqlite"] }
rocket_sync_db_pools = {version = "0.1.0", features = ["diesel_sqlite_pool"]}
r2d2 = "0.8.10"
dotenvy = "0.15"
serde = "1.0.210"
