[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"            # Optimize for size while maintaining reasonable speed
lto = true                 # Enable Link Time Optimization
codegen-units = 1          # Single codegen unit for better optimization (at the cost of longer compile time)
incremental = false        # Disable incremental compilation for release builds

[profile.dev]
codegen-units = 16    # Higher value to speed up compilation
opt-level = 0         # Minimal optimizations, faster builds
debug = true          # Enable debug info

[dependencies]
base64 = "0.22.1"
rocket = {version = "0.5.1", features = ["json"]}
serde_json = "1.0.128"
diesel = { version = "2.2.0", features = ["sqlite"] }
rocket_sync_db_pools = {version = "0.1.0", features = ["diesel_sqlite_pool"]}
r2d2 = "0.8.10"
dotenvy = "0.15"
serde = "1.0.210"
diesel_migrations = "2.2.0"
